@@ -38,6 +38,7 @@ import net.minecraft.block.NoteBlock;
 import net.minecraft.block.enums.Instrument;
 import net.minecraft.network.packet.c2s.play.PlayerActionC2SPacket;
 import net.minecraft.network.packet.c2s.play.PlayerInteractBlockC2SPacket;
+import net.minecraft.server.network.ServerPlayNetworkHandler;
 import net.minecraft.sound.SoundEvents;
 import net.minecraft.util.Hand;
 import net.minecraft.util.hit.BlockHitResult;
@@ -482,7 +483,7 @@ public class Notebot extends Module {
 
             if (uniqueNotesToUse.contains(note)) {
                 // Add correct noteblock position to a noteBlockPositions
-                noteBlockPositions.put(note, noteblocks.removeFirst());
+                noteBlockPositions.put(note, noteblocks.remove(0));
                 uniqueNotesToUse.remove(note);
             }
 
@@ -513,7 +514,7 @@ public class Notebot extends Module {
                 for (BlockPos pos : positions) {
                     if (foundNotes.isEmpty()) break;
 
-                    Note note = foundNotes.removeFirst();
+                    Note note = foundNotes.remove(0);
                     noteBlockPositions.put(note, pos);
 
                     uniqueNotesToUse.remove(note);
@@ -522,7 +523,7 @@ public class Notebot extends Module {
                 for (BlockPos pos : positions) {
                     if (uniqueNotesToUse.isEmpty()) break;
 
-                    Note note = uniqueNotesToUse.removeFirst();
+                    Note note = uniqueNotesToUse.remove(0);
                     noteBlockPositions.put(note, pos);
                 }
             }
@@ -570,8 +571,7 @@ public class Notebot extends Module {
         WButton alignCenter = table.add(theme.button("Align Center")).expandX().minWidth(100).widget();
         alignCenter.action = () -> {
             if (mc.player == null) return;
-            Vec3d pos = Vec3d.ofBottomCenter(mc.player.getBlockPos());
-            mc.player.setPosition(pos.x, mc.player.getY(), pos.z);
+            mc.player.setPosition(Vec3d.ofBottomCenter(mc.player.getBlockPos()));
         };
 
         table.row();
@@ -765,8 +765,8 @@ public class Notebot extends Module {
     private void scanForNoteblocks() {
         if (mc.interactionManager == null || mc.world == null || mc.player == null) return;
         scannedNoteblocks.clear();
-        int min = (int) (-mc.player.getBlockInteractionRange()) - 2;
-        int max = (int) mc.player.getBlockInteractionRange() + 2;
+        int min = (int) (-mc.interactionManager.getReachDistance()) - 2;
+        int max = (int) mc.interactionManager.getReachDistance() + 2;
 
         // Scan for noteblocks horizontally
         // 6^3 kek
@@ -779,7 +779,9 @@ public class Notebot extends Module {
                     if (blockState.getBlock() != Blocks.NOTE_BLOCK) continue;
 
                     // Copied from ServerPlayNetworkHandler#onPlayerInteractBlock
-                    if (!mc.player.canInteractWithBlockAt(pos, 1)) continue;
+                    Vec3d vec3d2 = Vec3d.ofCenter(pos);
+                    double sqDist = mc.player.getEyePos().squaredDistanceTo(vec3d2);
+                    if (sqDist > ServerPlayNetworkHandler.MAX_BREAK_SQUARED_DISTANCE) continue;
 
                     if (!isValidScanSpot(pos)) continue;
 
@@ -787,6 +789,7 @@ public class Notebot extends Module {
                     scannedNoteblocks.put(note, pos);
                 }
             }
+
         }
     }
 
